--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -204,10 +204,21 @@ later\footnotemark[1].
 \begin{figure}[!htb]
 
   \begin{minipage}{0.55\textwidth}
-    \centering
-    \includegraphics[width=\linewidth]{gilbert2d_mainsubdiv.pdf}
-    \caption{ Subdivision strategy for the 2D Gilbert curve. }
-    \label{fig:main2dsubdiv}
+
+    \begin{minipage}{1.0\textwidth}
+      \centering
+      \includegraphics[width=\linewidth]{gilbert2d_mainsubdiv.pdf}
+      \caption{ Subdivision strategy for the 2D Gilbert curve. }
+      \label{fig:main2dsubdiv}
+    \end{minipage}
+
+    \begin{minipage}{1.0\textwidth}
+      \centering
+      \includegraphics[width=0.65\linewidth]{gilbert2d_example_mainsubdiv.pdf}
+      \caption{ Example curve with subdivision regions highlighted. }
+      \label{fig:main2dsubdivExample}
+    \end{minipage}
+
   \end{minipage}\hfill
   \begin{minipage}{0.45\textwidth}
     \centering
