example 2d eccentric split

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -274,29 +274,33 @@ This means the number of notches for the 3D Gilbert curve isn't limited to one.
 
 
 
-\section*{Eccentric Subdivision}
 
 \begin{figure}[h]
 
   \begin{minipage}[ht]{0.48\linewidth}
 
     \centering
-    \includegraphics[width=\linewidth]{gilbert2d_eccentric_appendix.pdf}
-    \caption{ When the length of the width-like dimension ($|\alpha|$) gets larger than a threshold of the height-like
-              dimension ($\sigma |\beta|$), then the width like dimension is split into two. }
+    \includegraphics[width=0.925\linewidth]{gilbert2d_eccentric_simple.pdf}
+    \caption{ Eccentric subdivision when $|\alpha|$ oblong relative to $|\beta|$ }
     \label{fig:eccentric_2d}
 
   \end{minipage}\hfill
   \begin{minipage}[ht]{0.48\linewidth}
 
     \centering
-    \includegraphics[width=\linewidth]{gilbert3d_eccentric_appendix_s0.pdf}
-    \caption{ An $S_0$ eccentric subdivision showing the threshold, $\sigma$, used to determine when we should use this split. }
-    \label{fig:eccentric_s0}
+    \includegraphics[width=1.0\linewidth]{gilbert2d_example_eccentric.pdf}
+    \caption{ Example Gilbert 2D eccentric split when width is oblong relative to height }
+    \label{fig:eccentric_2d_example}
 
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_appendix_s0.pdf}
+%    \caption{ An $S_0$ eccentric subdivision showing the threshold, $\sigma$, used to determine when we should use this split. }
+%    \label{fig:eccentric_s0}
+%
   \end{minipage}
 \end{figure}
 
+\section*{Eccentric Subdivision}
 
 \begin{figure}[h]
   \begin{minipage}[ht]{0.48\linewidth}
